# src/routes/index.js
@@ -5,9 +5,11 @@ const countryRoutes = require('./countryRoutes');
 const productRoutes = require('./productRoutes');
 const seasonRoutes = require("./seasonRoutes");
 const diseaseRoutes = require("./diseaseRoutes");
+
 const authRoutes = require("./authRoutes");
 const publicProductRoutes = require("./publicProductRoutes");
 const publicCountryRoutes = require("./publicCountryRoutes");
+const publicSeasonRoutes = require("./publicSeasonRoutes");
 
 const authentication = require('./../infrastructure/middlewares/authenticatation');
 
@@ -25,9 +27,10 @@ module.exports = (controllers) => {
     router.use('/api/product', productRoutes(controllers.productController));
     router.use('/api/disease', diseaseRoutes(controllers.diseaseController));
 
+    router.use('/public/api/auth', authRoutes(controllers.authController));
     router.use('/public/api/product', publicProductRoutes(controllers.productController));
     router.use('/public/api/country', publicCountryRoutes(controllers.countryController));
-    router.use('/public/api/auth', authRoutes(controllers.authController));
+    router.use('/public/api/season', publicSeasonRoutes(controllers.seasonController));
     return router;
 };
 
