# src/routes/publicSeasonRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+
+module.exports = (seasonController) => {
+    router.get('/', seasonController.getAllSeasons.bind(seasonController));
+    return router;
+};
+
